--- a/airbyte-integrations/connectors/source-azure-table/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-azure-table/acceptance-test-config.yml
@@ -24,4 +24,6 @@ tests:
     - config_path: "secrets/config.json"
       configured_catalog_path: "integration_tests/configured_catalog.json"
       ignored_fields:
-        "AirbyteTest": ["record"]
+        AirbyteTest:
+          - name: record
+            bypass_reason: "fast changing data"
