--- a/airbyte-integrations/connectors/source-clickup-api/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-clickup-api/acceptance-test-config.yml
@@ -17,7 +17,11 @@ acceptance_tests:
     - config_path: secrets/config.json
       configured_catalog_path: integration_tests/configured_catalog.json
       ignored_fields:
-        "team": ["members", "last_active"]
+        team:
+          - name: members
+            bypass_reason: "fast changing data"
+          - name: last_active
+            bypass_reason: "fast changing data"
   spec:
     tests:
     - spec_path: source_clickup_api/spec.yaml
