Only generate api client code as needed

--- a/airbyte-webapp/package.json
+++ b/airbyte-webapp/package.json
@@ -25,7 +25,7 @@
     "stylelint": "stylelint 'src/**/*.{css,scss}'",
     "stylelint-check": "stylelint-config-prettier-scss-check",
     "license-check": "node ./scripts/license-check.js",
-    "generate-client": "./scripts/load-declarative-schema.sh && orval",
+    "generate-client": "./scripts/load-declarative-schema.sh && node ./scripts/regenerate-api-clients.js",
     "validate-links": "ts-node --skip-project ./scripts/validate-links.ts"
   },
   "dependencies": {
